--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header class="navigation">
             <div class="inline-block">
                 <div class="Logo">
-                <img src="Black & White Simple Initial Circle Badge Logo.jpg" width="150" heigh="150">
+                <img src="Images/HLogo.jpg" width="150" heigh="150">
             </div>
 
             <nav class ="inline-block">
@@ -26,7 +26,7 @@
 
             <section class="heroImg">
                 <div class="content">
-                    <img src="IMG_4718 copy.jpg" width="225" height="300">
+                    <img src="Images/Self.jpg" width="225" height="300">
                 </div>
                 <footer>
                     <ul>
